--- a/perceptron_number_detection.ipynb
+++ b/perceptron_number_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +12,19 @@
     "import math\n",
     "from functools import *\n",
     "\n",
-    "dataset = pd.read_csv('mnist/mnist_train.csv')\n",
-    "testset = pd.read_csv('mnist/mnist_test.csv')"
+    "dataset = pd.read_csv('../mnist/mnist_train.csv')\n",
+    "testset = pd.read_csv('../mnist/mnist_test.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Perceptron(object):\n",
     "    def __init__(self,input_size, number=-1, lr=1, epochs=100):\n",
-    "        self.W = np.zeros(input_size+1)\n",
+    "        self.W = np.random.normal(0, 0.5, input_size+1)\n",
     "        self.epochs = epochs\n",
     "        self.lr = lr\n",
     "        self.number = number\n",
@@ -37,9 +37,11 @@
     "        a = self.activation_fn(z)\n",
     "        return a\n",
     "    \n",
-    "    def guess_new(self, x):\n",
-    "        z = self.W[1:].dot(x) + self.W[0]\n",
-    "        return self.activation_fn(z)\n",
+    "    def guess_new(self, y):\n",
+    "        x = np.insert(y, 0, 1)\n",
+    "        z = self.W.T.dot(x)\n",
+    "        a = self.activation_fn(z)\n",
+    "        return a\n",
     " \n",
     "    def fit(self, X, d):\n",
     "        for _ in range(self.epochs):\n",
@@ -52,54 +54,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = np.array(dataset)[0:300,:]\n",
-    "test = np.array(testset)[0:300,:]"
+    "x_train = np.array(dataset)[0:100, 1:] / 255\n",
+    "y_train = np.array(dataset)[0:100, 0]\n",
+    "\n",
+    "x_test = np.array(testset)[:, 1:] / 255\n",
+    "y_test = np.array(testset)[:, 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
+   "execution_count": 71,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Perceptron number 0 is: 0.12\n",
-      "Accuracy of Perceptron number 1 is: 0.205\n",
-      "Accuracy of Perceptron number 2 is: 0.16\n",
-      "Accuracy of Perceptron number 3 is: 0.12\n",
-      "Accuracy of Perceptron number 4 is: 0.19\n",
-      "Accuracy of Perceptron number 5 is: 0.145\n",
-      "Accuracy of Perceptron number 6 is: 0.12\n",
-      "Accuracy of Perceptron number 7 is: 0.165\n",
-      "Accuracy of Perceptron number 8 is: 0.105\n",
-      "Accuracy of Perceptron number 9 is: 0.17\n"
+      "Accuracy of Perceptron number 0 is: 0.09\n",
+      "Accuracy of Perceptron number 1 is: 0.11\n",
+      "Accuracy of Perceptron number 2 is: 0.10\n",
+      "Accuracy of Perceptron number 3 is: 0.10\n",
+      "Accuracy of Perceptron number 4 is: 0.09\n",
+      "Accuracy of Perceptron number 5 is: 0.08\n",
+      "Accuracy of Perceptron number 6 is: 0.09\n",
+      "Accuracy of Perceptron number 7 is: 0.10\n",
+      "Accuracy of Perceptron number 8 is: 0.09\n",
+      "Accuracy of Perceptron number 9 is: 0.10\n"
      ]
     }
    ],
    "source": [
     "#Train perceptron by correspondent number\n",
     "\n",
-    "perseptrons = [Perceptron(input_size=train.shape[1]-1, lr=0.001, epochs=100,number=i) for i in range(10)]\n",
+    "perseptrons = [Perceptron(input_size=x_train.shape[1], lr=0.1, epochs=10,number=i) for i in range(10)]\n",
     "\n",
     "for perceptron in perseptrons:\n",
-    "    perceptron.fit(train[:, 1:], train[0:, 0])\n",
+    "    perceptron.fit(x_train, y_train)\n",
     "    #Get Accuracy\n",
-    "    total = 200\n",
+    "    total = y_test.shape[0]\n",
     "    err_total = 0\n",
     "    acc_total = 0\n",
-    "    for test_case in test:\n",
-    "        prediction = round(perceptron.guess_new(test_case[1:]))\n",
-    "        if (prediction == 1 and perceptron.number == test_case[0]):\n",
+    "    for test_case, test_answer in zip(x_test, y_test):\n",
+    "        prediction = round(perceptron.guess_new(test_case))\n",
+    "        if (prediction == 1 and perceptron.number == test_answer):\n",
     "            acc_total +=1\n",
     "        else:\n",
     "            err_total +=1\n",
-    "    print('Accuracy of Perceptron number ' + str(perceptron.number) + ' is: ' + str(float(acc_total)/float(total)))"
+    "    print('Accuracy of Perceptron number ' + str(perceptron.number) + ' is: ' + str(float(acc_total)/float(total))[:4])"
    ]
   },
   {
