--- a/perceptron_number_detection.ipynb
+++ b/perceptron_number_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import pandas as pd\n",
     "import math\n",
     "from functools import *\n",
+    "import operator\n",
     "\n",
     "dataset = pd.read_csv('../mnist/mnist_train.csv')\n",
     "testset = pd.read_csv('../mnist/mnist_test.csv')"
@@ -18,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +40,7 @@
     "    \n",
     "    def guess_new(self, y):\n",
     "        x = np.insert(y, 0, 1)\n",
-    "        z = self.W.T.dot(x)\n",
-    "        a = self.activation_fn(z)\n",
-    "        return a\n",
+    "        return self.predict(x)\n",
     " \n",
     "    def fit(self, X, d):\n",
     "        for _ in range(self.epochs):\n",
@@ -54,12 +53,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train = np.array(dataset)[0:100, 1:] / 255\n",
-    "y_train = np.array(dataset)[0:100, 0]\n",
     "\n",
     "x_test = np.array(testset)[:, 1:] / 255\n",
     "y_test = np.array(testset)[:, 0]"
@@ -67,46 +64,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 175,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Perceptron number 0 is: 0.09\n",
-      "Accuracy of Perceptron number 1 is: 0.11\n",
-      "Accuracy of Perceptron number 2 is: 0.10\n",
-      "Accuracy of Perceptron number 3 is: 0.10\n",
-      "Accuracy of Perceptron number 4 is: 0.09\n",
-      "Accuracy of Perceptron number 5 is: 0.08\n",
-      "Accuracy of Perceptron number 6 is: 0.09\n",
-      "Accuracy of Perceptron number 7 is: 0.10\n",
-      "Accuracy of Perceptron number 8 is: 0.09\n",
-      "Accuracy of Perceptron number 9 is: 0.10\n"
+      "Accuracy of Perceptron number 0 is: 0.0021\n",
+      "Accuracy of Perceptron number 1 is: 0.2080\n",
+      "Accuracy of Perceptron number 2 is: 0.1324\n",
+      "Accuracy of Perceptron number 3 is: 0.1018\n",
+      "Accuracy of Perceptron number 4 is: 0.0974\n",
+      "Accuracy of Perceptron number 5 is: 0.0868\n",
+      "Accuracy of Perceptron number 6 is: 0.0884\n",
+      "Accuracy of Perceptron number 7 is: 0.0966\n",
+      "Accuracy of Perceptron number 8 is: 0.1121\n",
+      "Accuracy of Perceptron number 9 is: 0.1092\n"
      ]
     }
    ],
    "source": [
     "#Train perceptron by correspondent number\n",
-    "\n",
-    "perseptrons = [Perceptron(input_size=x_train.shape[1], lr=0.1, epochs=10,number=i) for i in range(10)]\n",
+    "samples = 10000\n",
+    "perseptrons = [Perceptron(input_size=784, lr=0.1, epochs=10,number=i) for i in range(10)]\n",
     "\n",
     "for perceptron in perseptrons:\n",
+    "    x_train = np.array(dataset)[0:samples, :]\n",
+    "    \n",
+    "    #Selectors\n",
+    "    x_true_selector = perceptron.number == x_train[:, 0]    \n",
+    "    x_true_selector = pd.Series(x_true_selector)\n",
+    "    x_false_selector = perceptron.number != x_train[: ,0]\n",
+    "    x_false_selector = pd.Series(x_false_selector)\n",
+    "    \n",
+    "    # 50% True 50% False examples\n",
+    "    correspondent_x_train = x_train[x_true_selector]\n",
+    "    not_correspondent_x_train = x_train[x_false_selector]\n",
+    "    \n",
+    "    #Reduce length to match correspondent \n",
+    "    not_correspondent_x_train = not_correspondent_x_train[0:correspondent_x_train.shape[0],:]\n",
+    "    \n",
+    "    x_train = np.concatenate((not_correspondent_x_train, correspondent_x_train))\n",
+    "    np.random.shuffle(x_train)\n",
+    "    \n",
+    "    #Final x_train, y_train values\n",
+    "    y_train = x_train[:, 0]\n",
+    "    y_train = [1 if(i == perceptron.number) else 0 for i in y_train]\n",
+    "    y_train = np.array(y_train)\n",
+    "    x_train = x_train[:, 1:] / 255\n",
+    "    \n",
+    "    #Fit Perceptron\n",
     "    perceptron.fit(x_train, y_train)\n",
+    "    #print('Sample positive sum = ' + str(operator.countOf(y_train, True)))\n",
+    "    \n",
     "    #Get Accuracy\n",
     "    total = y_test.shape[0]\n",
     "    err_total = 0\n",
     "    acc_total = 0\n",
     "    for test_case, test_answer in zip(x_test, y_test):\n",
     "        prediction = round(perceptron.guess_new(test_case))\n",
-    "        if (prediction == 1 and perceptron.number == test_answer):\n",
+    "        if (prediction == test_answer):\n",
     "            acc_total +=1\n",
     "        else:\n",
     "            err_total +=1\n",
-    "    print('Accuracy of Perceptron number ' + str(perceptron.number) + ' is: ' + str(float(acc_total)/float(total))[:4])"
+    "    print('Accuracy of Perceptron number ' + str(perceptron.number) + ' is: ' + str(float(acc_total)/float(total))[:6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the network is: 0.84528452\n",
+      "Correct: 8452\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "acc_total = 0\n",
+    "total = y_test.shape[0]\n",
+    "\n",
+    "for test_case, answer in zip(x_test, y_test):\n",
+    "    predictions = [perceptron.guess_new(test_case) for perceptron in perseptrons]\n",
+    "    if np.argmax(predictions) == answer:\n",
+    "        acc_total += 1\n",
+    "print('Accuracy of the network is: ' + str(float(acc_total)/float(total))[:10])\n",
+    "print('Correct: ' + str(acc_total))"
    ]
   },
   {
