--- a/perceptron_number_detection.ipynb
+++ b/perceptron_number_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,18 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "x_test = np.array(testset)[:, 1:] / 255\n",
     "y_test = np.array(testset)[:, 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -73,23 +72,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Perceptron number 0 is: 0.0021\n",
-      "Accuracy of Perceptron number 1 is: 0.2080\n",
-      "Accuracy of Perceptron number 2 is: 0.1324\n",
-      "Accuracy of Perceptron number 3 is: 0.1018\n",
-      "Accuracy of Perceptron number 4 is: 0.0974\n",
-      "Accuracy of Perceptron number 5 is: 0.0868\n",
-      "Accuracy of Perceptron number 6 is: 0.0884\n",
-      "Accuracy of Perceptron number 7 is: 0.0966\n",
-      "Accuracy of Perceptron number 8 is: 0.1121\n",
-      "Accuracy of Perceptron number 9 is: 0.1092\n"
+      "59999\n",
+      "Accuracy of Perceptron number 0 is: 40.8%\n",
+      "Accuracy of Perceptron number 1 is: 64.8%\n",
+      "Accuracy of Perceptron number 2 is: 43.3%\n",
+      "Accuracy of Perceptron number 3 is: 44.2%\n",
+      "Accuracy of Perceptron number 4 is: 42.6%\n",
+      "Accuracy of Perceptron number 5 is: 31.9%\n",
+      "Accuracy of Perceptron number 6 is: 75.5%\n",
+      "Accuracy of Perceptron number 7 is: 34.2%\n",
+      "Accuracy of Perceptron number 8 is: 36.8%\n",
+      "Accuracy of Perceptron number 9 is: 49.3%\n"
      ]
     }
    ],
    "source": [
     "#Train perceptron by correspondent number\n",
-    "samples = 10000\n",
-    "perseptrons = [Perceptron(input_size=784, lr=0.1, epochs=10,number=i) for i in range(10)]\n",
+    "print(np.array(dataset).shape[0])\n",
+    "samples = 500\n",
+    "perseptrons = [Perceptron(input_size=784, lr=0.001, epochs=50,number=i) for i in range(10)]\n",
     "\n",
     "for perceptron in perseptrons:\n",
     "    x_train = np.array(dataset)[0:samples, :]\n",
@@ -118,32 +119,29 @@
     "    \n",
     "    #Fit Perceptron\n",
     "    perceptron.fit(x_train, y_train)\n",
-    "    #print('Sample positive sum = ' + str(operator.countOf(y_train, True)))\n",
     "    \n",
     "    #Get Accuracy\n",
+    "    y_boolean_test = [1 if(i == perceptron.number) else 0 for i in y_test]\n",
+    "    y_boolean_test = np.array(y_boolean_test)\n",
+    "    \n",
     "    total = y_test.shape[0]\n",
-    "    err_total = 0\n",
-    "    acc_total = 0\n",
-    "    for test_case, test_answer in zip(x_test, y_test):\n",
-    "        prediction = round(perceptron.guess_new(test_case))\n",
-    "        if (prediction == test_answer):\n",
-    "            acc_total +=1\n",
-    "        else:\n",
-    "            err_total +=1\n",
-    "    print('Accuracy of Perceptron number ' + str(perceptron.number) + ' is: ' + str(float(acc_total)/float(total))[:6])"
+    "    err_total = 0.0\n",
+    "    for test_case, test_answer in zip(x_test, y_boolean_test):\n",
+    "        prediction = perceptron.guess_new(test_case)\n",
+    "        err_total += abs(test_answer - prediction)\n",
+    "    print('Accuracy of Perceptron number ' + str(perceptron.number) + ' is: ' + str(100 - 100*err_total/total)[:4] + '%')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network is: 0.84528452\n",
-      "Correct: 8452\n"
+      "Accuracy of the network is: 10.3%\n"
      ]
     }
    ],
@@ -156,8 +154,7 @@
     "    predictions = [perceptron.guess_new(test_case) for perceptron in perseptrons]\n",
     "    if np.argmax(predictions) == answer:\n",
     "        acc_total += 1\n",
-    "print('Accuracy of the network is: ' + str(float(acc_total)/float(total))[:10])\n",
-    "print('Correct: ' + str(acc_total))"
+    "print('Accuracy of the network is: ' + str(100 * float(acc_total)/float(total))[:4] + '%')"
    ]
   },
   {
