--- a/perceptron_number_detection.ipynb
+++ b/perceptron_number_detection.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -72,25 +72,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "59999\n",
-      "Accuracy of Perceptron number 0 is: 40.8%\n",
-      "Accuracy of Perceptron number 1 is: 64.8%\n",
-      "Accuracy of Perceptron number 2 is: 43.3%\n",
-      "Accuracy of Perceptron number 3 is: 44.2%\n",
-      "Accuracy of Perceptron number 4 is: 42.6%\n",
-      "Accuracy of Perceptron number 5 is: 31.9%\n",
-      "Accuracy of Perceptron number 6 is: 75.5%\n",
-      "Accuracy of Perceptron number 7 is: 34.2%\n",
-      "Accuracy of Perceptron number 8 is: 36.8%\n",
-      "Accuracy of Perceptron number 9 is: 49.3%\n"
+      "Accuracy of Perceptron number 0 is: 95.7%\n",
+      "Accuracy of Perceptron number 1 is: 96.9%\n",
+      "Accuracy of Perceptron number 2 is: 89.5%\n",
+      "Accuracy of Perceptron number 3 is: 89.2%\n",
+      "Accuracy of Perceptron number 4 is: 92.8%\n",
+      "Accuracy of Perceptron number 5 is: 86.0%\n",
+      "Accuracy of Perceptron number 6 is: 94.4%\n",
+      "Accuracy of Perceptron number 7 is: 93.4%\n",
+      "Accuracy of Perceptron number 8 is: 81.8%\n",
+      "Accuracy of Perceptron number 9 is: 87.3%\n"
      ]
     }
    ],
    "source": [
     "#Train perceptron by correspondent number\n",
-    "print(np.array(dataset).shape[0])\n",
-    "samples = 500\n",
-    "perseptrons = [Perceptron(input_size=784, lr=0.001, epochs=50,number=i) for i in range(10)]\n",
+    "samples = np.array(dataset).shape[0]\n",
+    "perseptrons = [Perceptron(input_size=784, lr=0.001, epochs=10,number=i) for i in range(10)]\n",
     "\n",
     "for perceptron in perseptrons:\n",
     "    x_train = np.array(dataset)[0:samples, :]\n",
@@ -134,14 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network is: 10.3%\n"
+      "Accuracy of the network is: 88.0%\n"
      ]
     }
    ],
