--- a/pytorch_CNN_mnist.ipynb
+++ b/pytorch_CNN_mnist.ipynb
@@ -42081,6 +42081,7 @@
     }
    ],
    "source": [
+    "#Train\n",
     "for epoch in range(epochs):\n",
     "    total_loss = 0\n",
     "    net.train()\n",
@@ -42093,7 +42094,22 @@
     "        loss.backward()\n",
     "        optmizer.step()\n",
     "    print('Epoch {}\\n has Loss {}'.format(epoch, total_loss))\n",
-    "    break\n",
+    "\n",
+    "    #Validation\n",
+    "    best_loss = 1\n",
+    "    total_cnt = 0\n",
+    "    correct_cnt = 0\n",
+    "    test_loss = 0\n",
+    "    net.eval()\n",
+    "    for inputs,targets in validation_loader:\n",
+    "        inputs, targets = Variable(inputs).cuda(), Variable(torch.squeeze(targets)).cuda()\n",
+    "        output = Variable(net(inputs))\n",
+    "        test_loss += eq_loss(output, targets)\n",
+    "        _, pred_label = torch.max(output, 1)\n",
+    "        target = np.arrary(targets)\n",
+    "        total_cnt = target.shape[0]\n",
+    "        #for ... \n",
+    "\n",
     "    "
    ]
   },
